2021-11-11  Wenson Hsieh  <wenson_hsieh@apple.com>

        Move image overlay code out of HTMLElement and into a separate helper file
        https://bugs.webkit.org/show_bug.cgi?id=232974

        Reviewed by Antti Koivisto.

        See WebCore/ChangeLog for more details.

        * WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
        (WebKit::WebPage::dictionaryPopupInfoForRange):
        * WebProcess/WebPage/FindController.cpp:
        (WebKit::FindController::updateFindIndicator):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::editorState const):
        (WebKit::WebPage::findDataDetectionResultElementInImageOverlay):
        (WebKit::WebPage::requestTextRecognition):
        (WebKit::WebPage::updateWithTextRecognitionResult):
        * WebProcess/WebPage/ios/FindControllerIOS.mm:
        (WebKit::findTextIndicatorOptions):
        * WebProcess/WebPage/ios/WebPageIOS.mm:
        (WebKit::insideImageOverlay):
        (WebKit::rangeForPointInRootViewCoordinates):
        (WebKit::hostVideoElementIgnoringImageOverlay):
        (WebKit::elementPositionInformation):
        * WebProcess/WebPage/mac/WebPageMac.mm:
        (WebKit::WebPage::performImmediateActionHitTestAtLocation):

2021-11-11  Ben Nham  <nham@apple.com>

        Log memory usage metadata when WebContent crosses critical or warning level memory thresholds
        https://bugs.webkit.org/show_bug.cgi?id=232976

        Reviewed by Darin Adler.

        Added callbacks to log memory usage metadata the first time a process hits these milestones:

         - exceeded inactive memory limit while active (on Mac)
         - exceeded warning process limit threshold (on other non-Mac Apple platforms)
         - exceeded critical process limit threshold (on other non-Mac Apple platforms)

        The reason for this is we  receive a large number of out of memory reports with very little
        info in the logs. We want to log more metadata about memory usage (similar to what we do on