@@ -131,6 +131,9 @@
             (iokit-method-number
                 0
                 47
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 120300
+                48
+#endif
             )
 #endif
         )
@@ -163,6 +166,24 @@
                 30
                 31
                 40
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 120300
+                41
+                43
+                49
+                257
+                258
+                259
+                260
+                261
+                262
+                263
+                264
+                265
+                266
+                268
+                269
+                513
+#else
                 42
                 48
                 256
@@ -178,6 +199,7 @@
                 267
                 268
                 512
+#endif
             )
 #endif
         )
@@ -185,9 +207,15 @@
         (if (equal? (param "CPU") "arm64")
             (allow iokit-external-method
                 (iokit-method-number
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 120300
+                    44
+                    45
+                    47
+#else
                     43
                     44
                     46
+#endif
                 )
             )
         )
