@@ -1,3 +1,15 @@
+2021-11-11  Per Arne  <pvollan@apple.com>
+
+        [macOS] Add required methods to IOKit message filter
+        https://bugs.webkit.org/show_bug.cgi?id=233012
+        <rdar://85307256>
+
+        Reviewed by Brent Fulgham.
+
+        Add required methods to IOKit message filter on macOS.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2021-11-11  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Move image overlay code out of HTMLElement and into a separate helper file
